samples/_failures_safe/1761405870_804304_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_057d307d.c: In function ‘print_stats’:
./samples/SAFE/__tmp_057d307d.c:134:12: error: missing terminating " character
  134 |     printf("Errors:
      |            ^~~~~~~~
./samples/SAFE/__tmp_057d307d.c:134:5: error: expected expression at end of input
  134 |     printf("Errors:
      |     ^~~~~~
./samples/SAFE/__tmp_057d307d.c:134:5: error: expected declaration or statement at end of input
